[gd_scene load_steps=3 format=3 uid="uid://cu7clp1k2c2ks"]

[ext_resource type="Script" path="res://Nodes/Scenes/page_14.gd" id="1_cucoq"]
[ext_resource type="Texture2D" uid="uid://weasvh11p3rp" path="res://Sprites/NotePageEmpty.png" id="2_sogh3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cucoq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sogh3")

[node name="ExitLeft" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.254
anchor_bottom = 1.0
offset_right = -0.119995
grow_vertical = 2
flat = true

[node name="ExitRight" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.722
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.160095
grow_horizontal = 0
grow_vertical = 2
flat = true

[node name="Next" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.664
anchor_top = 0.839
anchor_right = 0.716
anchor_bottom = 0.921
offset_left = 0.0799561
offset_top = 0.359985
offset_right = 0.519958
offset_bottom = 0.039978
flat = true

[connection signal="pressed" from="TextureRect/ExitLeft" to="." method="_on_exit_left_pressed"]
[connection signal="pressed" from="TextureRect/ExitRight" to="." method="_on_exit_right_pressed"]
[connection signal="pressed" from="TextureRect/Next" to="." method="_on_next_pressed"]
